--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/web3.js": "^1.98.4",
     "axios": "^1.12.2",
     "ethers": "^6.15.0",
     "gsap": "^3.13.0",
+    "jotai": "^2.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "luxon": "^3.7.2",
