--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,6 @@
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.12.2",
     "bn.js": "^5.2.2",
-    "ethers": "^6.15.0",
     "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
@@ -25,7 +24,7 @@
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.65.0",
     "react-input-pin-code": "^2.0.1",
     "react-svg": "^16.3.0",
     "recharts": "^3.2.1",
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bn.js": "^5.2.0",
     "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20",
